# frameworks-getting-started

./: .gitignore  README.md  dvc_pipeline.html  dvc_setup.html  file_structure.html  index.html  nbdev_setup.html  pdm_setup.html  pyproject.toml  requirements.txt  robots.txt  search.json  settings.ini  sitemap.xml
.ipynb_checkpoints/: README-checkpoint.md  kubernetes-bom-checkpoint.txt  pyproject-checkpoint.toml
SBOM-testing/: README.md  github-generated.json  output.txt
_manifest/spdx_2.2/: manifest.spdx.json.sha256
_proc/: 00_pdm_setup.ipynb  01_nbdev_setup.ipynb  02_dvc_setup.ipynb  03_file_structure.ipynb  04_dvc_pipeline.ipynb  index.ipynb  sidebar.yml
_proc/_docs/: dvc_pipeline.html  dvc_setup.html  file_structure.html  nbdev_setup.html  pdm_setup.html  search.json  sitemap.xml
_proc/_docs/site_libs/bootstrap/: bootstrap.min.css
frameworks_getting_started/: _modidx.py
nbs/: 00_pdm_setup.ipynb  01_nbdev_setup.ipynb  02_dvc_setup.ipynb  03_file_structure.ipynb  03_filestructure.ipynb  04_dvc_pipeline.ipynb  index.ipynb  nbdev.yml
nbs/.ipynb_checkpoints/: 00_pdm_setup-checkpoint.ipynb  01_nbdev_setup-checkpoint.ipynb  index-checkpoint.ipynb
