[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Peter Ainsworth", email = "painswor@nd.edu"},
]
dependencies = [
    "nbdev>=2.3.12",
    "setuptools>=67.6.1",
]
requires-python = ">=3.9"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm]
