[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Peter Ainsworth", email = "painswor@nd.edu"},
]
dependencies = [
    "nbdev>=2.3.12",
    "setuptools>=67.6.1",
    "ipykernel>=6.22.0",
    "torch>=2.0.0",
    "jupyter>=1.0.0",
    "dvc>=2.53.0",
]
requires-python = ">=3.9"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm]
